package model;

interface Characteristic {
    double join();
}
