package model;

public interface Rentable {

    Price consultRentalPrice(int days);
}
